# RAG_PDF_Analyzer

./: .env  .gitignore  main.py  pyproject.toml
backend/: .env  main.py  pyproject.toml  rag_pipeline.py  requirements.txt
backend/core/: config.py  security.py
backend/db/: mongo.py
backend/models/: auth_model.py
backend/routes/: auth_routes.py  rag_routes.py
backend/services/: rag_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AuthPage.jsx  ChatBox.jsx  Dashboard.jsx  DotGrid.jsx  LandingPage.jsx  UploadPDF.jsx
frontend/src/hooks/: useTypewriter.js
